--- a/Languages/English/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
+++ b/Languages/English/DefInjected/ThingDef/Plants_Cultivated_Vegetables.xml
@@ -4,14 +4,13 @@
   <Plant_TreeBioHarbinger.label>Blackthorn</Plant_TreeBioHarbinger.label>
   <Plant_TreeBioHarbinger.description>Blackthorn is a bloodthirsty plant that slowly transforms bodies into biomatter..</Plant_TreeBioHarbinger.description>
 
-  <ChoppedStump_BioHarbinger.label>A felled blackthorn stump</ChoppedStump_BioHarbinger.label>
-  <ChoppedStump_BioHarbinger.description>The stump left after a blackthorn bush has been cut down. The stump can be extracted, but it yields very little usable material. Left in the open, the stump will deteriorate over time.</ChoppedStump_BioHarbinger.description>
-
-  <SmashedStump_BioHarbinger.label>crushed blackthorn stump</SmashedStump_BioHarbinger.label>
-  <SmashedStump_BioHarbinger.description>The remains of a blackthorn bush, destroyed by damage. It is ugly. The stump can be pulled out, but it yields very little useful material. Left outside, the stump will deteriorate over time.</SmashedStump_BioHarbinger.description>
-
   <BioHarbingeSeed.label>Blackthorn seed</BioHarbingeSeed.label>
   <BioHarbingeSeed.description>Blackthorn Bush Seed. Can be planted to grow a new Harbinger Tree that will eat any corpses or meat placed nearby.</BioHarbingeSeed.description>
 
+
+  <!--<ChoppedStump_BioHarbinger.label>A felled blackthorn stump</ChoppedStump_BioHarbinger.label>-->
+  <!--<ChoppedStump_BioHarbinger.description>The stump left after a blackthorn bush has been cut down. The stump can be extracted, but it yields very little usable material. Left in the open, the stump will deteriorate over time.</ChoppedStump_BioHarbinger.description>-->
+  <!--<SmashedStump_BioHarbinger.label>crushed blackthorn stump</SmashedStump_BioHarbinger.label>-->
+  <!--<SmashedStump_BioHarbinger.description>The remains of a blackthorn bush, destroyed by damage. It is ugly. The stump can be pulled out, but it yields very little useful material. Left outside, the stump will deteriorate over time.</SmashedStump_BioHarbinger.description>-->
 
 </LanguageData>
