--- a/Languages/Korean/DefInjected/ThingDef/ThingDefs_Resources.xml
+++ b/Languages/Korean/DefInjected/ThingDef/ThingDefs_Resources.xml
@@ -3,10 +3,12 @@
 
   <!-- AMBER -->
 
-  <MinableAmber.label>amber</MinableAmber.label>
-  <MinableAmber.description>Rock containing bits of preserved sap.</MinableAmber.description>
-  
-<Amber.label>황색</Amber.label>
- <Amber.description>보존된 고대 나무 수액. 때로는 그 안에 작은 생물이 있습니다. 광택이 잘 나는 부드러운 수지입니다.</Amber.description>
- <Amber.stuffProps.stuffAdjective>황색</Amber.stuffProps.stuffAdjective>
+ <MinableAmber.label>앰버</MinableAmber.label>
+<MinableAmber.description>보존된 수액 조각이 들어 있는 바위.</MinableAmber.description>
+
+  <Amber.label>황색</Amber.label>
+  <Amber.description>보존된 고대 나무 수액. 때로는 그 안에 작은 생물이 있습니다. 광택이 잘 나는 부드러운 수지입니다.</Amber.description>
+  <Amber.stuffProps.stuffAdjective>황색</Amber.stuffProps.stuffAdjective>
+
+
 </LanguageData>
