--- a/Languages/Russian/DefInjected/ArchitectSense.DesignationSubCategoryDef/SubCategories.xml
+++ b/Languages/Russian/DefInjected/ArchitectSense.DesignationSubCategoryDef/SubCategories.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
+
   <SubCategory_AncientRugsGG.label>Шкуры реликтовых существ</SubCategory_AncientRugsGG.label>
   <SubCategory_AncientRugsGG.description>Шкуры реликтов</SubCategory_AncientRugsGG.description>
 
@@ -13,7 +14,7 @@
   <SubCategory_Traps.description>Специальные ловушки для защиты.</SubCategory_Traps.description>
 
 
-  <SubCategory_Columns.label>Колонна</SubCategory_Columns.label>
-  <SubCategory_Columns.description>Коло́нна — часть архитектурной конструкции, столб цилиндрической формы, деревянный, каменный или металлический. Удерживает крышу.</SubCategory_Columns.description>
+  <!--<SubCategory_Columns.label>Колонна</SubCategory_Columns.label>-->
+  <!--<SubCategory_Columns.description>Коло́нна — часть архитектурной конструкции, столб цилиндрической формы, деревянный, каменный или металлический. Удерживает крышу.</SubCategory_Columns.description>-->
 
 </LanguageData>
